# rp2040-triggers

./: CMakeLists.txt  LICENSE  README.md  pico_sdk_import.cmake  rp2040_4trigger_oem_sdk.uf2
src/: commands.c  commands.h  main.c  settings.c  settings.h  status_led.c  status_led.h  system_clock.c  system_clock.h  trigger.c  trigger.h
tools/: config_gui.py
